// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render an info bar for a venue correctly 1`] = `
<ul
  styleName="container"
>
  <li
    styleName="item"
  >
    <FaTags
      styleName="icon"
    />
    <span>
      Tags Label
    </span>
  </li>
  <li
    styleName="item"
  >
    <FaGlobe
      styleName="icon"
    />
    <a
      rel="noopener"
      styleName="link"
      target="_blank"
    >
      Website
    </a>
  </li>
  <li
    styleName="item"
  >
    <FaPencil
      styleName="icon"
    />
    <Link
      replace={false}
      styleName="link"
      to="/venue/edit/some-venue-id"
    >
      Edit
    </Link>
  </li>
</ul>
`;

exports[`should render an info bar for an event correctly 1`] = `
<ul
  styleName="container"
>
  <li
    styleName="item"
  >
    <FaTags
      styleName="icon"
    />
    <span>
      Tags Label
    </span>
  </li>
  <li
    styleName="item"
  >
    <FaGlobe
      styleName="icon"
    />
    <a
      rel="noopener"
      styleName="link"
      target="_blank"
    >
      Website
    </a>
  </li>
  <li
    styleName="item"
  >
    <FaPencil
      styleName="icon"
    />
    <Link
      replace={false}
      styleName="link"
      to="/event/edit/some-event-id"
    >
      Edit
    </Link>
  </li>
  <li
    styleName="item"
  >
    <FaCopy
      styleName="icon"
    />
    <Link
      onClick={[Function]}
      replace={false}
      styleName="link"
      to="/event"
    >
      Copy
    </Link>
  </li>
</ul>
`;
